--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<h1>
-  {{title}}
-</h1>
-
+<section>
+	<navbar></navbar>
+</section>
+<aside>
+	<sidebar></sidebar>
+</aside>
+<main>
+	<page-wrapper></page-wrapper>
+</main>
