--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,41 @@
-body {
-    margin-top: 100px;
-    background-color: #222;
-    font-family: 'Roboto', sans-serif !important;
+* {
+  box-sizing: border-box!important;
 }
-
-@media(min-width:768px) {
-    body {
-        margin-top: 50px;
-    }
+body {
+  background: #f3f3f4!important;
+  line-height: normal!important;
+  font-size: 16px!important;
+  font-family: sans-serif!important;
+}
+a,
+a:hover {
+  text-decoration: none!important;
+}
+@-webkit-keyframes flipInX {
+  0% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+  }
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+  100% {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
 }
