--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,116 +1,33 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="index.html"><img src="./assets/img/logo_minsa.jpg" alt="Logo de MINSA"></a>
-  </div>
-  <ul class="nav navbar-right top-nav">
-    <!-- <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-      <ul class="dropdown-menu message-dropdown">
-        <li class="message-preview">
-          <a href="#">
-            <div class="media">
-              <span class="pull-left">
-                <img class="media-object" src="http://placehold.it/50x50" alt="">
-              </span>
-              <div class="media-body">
-                <h5 class="media-heading"><strong>John Smith</strong>
-                </h5>
-                <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur...</p>
-              </div>
-            </div>
-          </a>
+<header>
+  <nav class="rad-navigation">
+    <div class="rad-logo-container">
+        <a href="#" class="rad-logo"><img src="./assets/img/logo_minsa.jpg" alt=""></a>
+        <a href="#" class="rad-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
+    </div>
+    <div class="rad-top-nav-container">
+      <ul class="links">
+        <li>
+          <a class="rad-menu-item" href="#"><i class="fa fa-comment-o"></i></a>
         </li>
-        <li class="message-preview">
-          <a href="#">
-            <div class="media">
-              <span class="pull-left">
-                <img class="media-object" src="http://placehold.it/50x50" alt="">
-              </span>
-              <div class="media-body">
-                <h5 class="media-heading"><strong>John Smith</strong>
-                </h5>
-                <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur...</p>
-              </div>
-            </div>
-          </a>
+        <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-envelope-o"><span class="rad-menu-badge">3</span></i></a>
+          <ul class="rad-dropmenu-item">
+            <li class="rad-dropmenu-header"><a href="#">Your Notifications</a></li>
+            <li class="rad-notification-item">
+                <a class="rad-notification-content" href="#"></a>
+              </li>
+              <li class="rad-dropmenu-footer"><a href="#">See all notifications</a></li>
+          </ul>
         </li>
-        <li class="message-preview">
-          <a href="#">
-            <div class="media">
-              <span class="pull-left">
-                  <img class="media-object" src="http://placehold.it/50x50" alt="">
-              </span>
-              <div class="media-body">
-                <h5 class="media-heading"><strong>John Smith</strong>
-                </h5>
-                <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                <p>Lorem ipsum dolor sit amet, consectetur...</p>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li class="message-footer">
-          <a href="#">Read All New Messages</a>
+        <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-bell-o"><span class="rad-menu-badge">49</span></i></a>
+          <ul class="rad-dropmenu-item">
+            <li class="rad-dropmenu-header"><a href="#">Your Alerts</a></li>
+            <li class="rad-notification-item">
+              <a class="rad-notification-content" href="#"></a>
+              </li>
+              <li class="rad-dropmenu-footer"><a href="#">See all alerts</a></li>
+          </ul>
         </li>
       </ul>
-    </li> -->
-   <!--  <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-      <ul class="dropdown-menu alert-dropdown">
-        <li>
-          <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-        </li>
-        <li>
-          <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-        </li>
-        <li>
-          <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-        </li>
-        <li>
-          <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-        </li>
-        <li>
-          <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-        </li>
-        <li>
-          <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <a href="#">View All</a>
-        </li>
-      </ul>
-    </li> -->
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <i class="fa fa-user-circle-o"></i>
-        <span>Sandra Suárez Peralta</span>
-        <b class="caret"></b>
-      </a>
-      <ul class="dropdown-menu">
-        <li>
-          <a href="#"><i class="fa fa-user-circle-o"></i> Profile</a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
-  <sidebar></sidebar>
-</nav>
+    </div>
+  </nav>
+</header>
