--- a/src/app/common/page-wrapper/page-wrapper.component.html
+++ b/src/app/common/page-wrapper/page-wrapper.component.html
@@ -1,8 +1,12 @@
-<div id="page-wrapper">
-  <div class="container-fluid">
-      <title-content></title-content>
-      <div class="row">
-        <collapse></collapse>
+<section>
+	<div class="rad-body-wrapper">
+      <div class="container-fluid">
+      	<!-- <title-content></title-content> -->
+      	<h1>Titulo</h1>
       </div>
-  </div>
-</div>
+      <div class="row">
+      	<!-- <collapse></collapse> -->
+      	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quaerat quae impedit, ipsa nisi dolorem facilis cum praesentium illum doloribus? Perspiciatis laboriosam minima doloremque assumenda alias maiores voluptatibus iusto sunt!</p>
+      </div>
+    </div>
+</section>
