--- a/src/app/common/sidebar/sidebar.component.css
+++ b/src/app/common/sidebar/sidebar.component.css
@@ -1,38 +1,74 @@
-.side-nav{
-  font-family: 'Roboto', sans-serif;
+* {
+  box-sizing: border-box!important;
 }
-.side-nav>li>ul {
-  padding: 0;
+.rad-sidebar {
+  z-index: 9999;
+  position: fixed;
+  background: #2f4050;
+  width: 225px;
+  height: 100vh;
+  top: 50px;
+  left: 0;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 2px 4px 8px rgba(0, 0, 0, 0.28);
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
-.side-nav>li>ul>li>a {
-  display: block;
-  padding: 10px 15px 10px 38px;
-  text-decoration: none;
-  color: #999;
+.rad-sidebar li {
+  text-align: left;
+  height: 50px;
 }
-.side-nav>li>ul>li>a:hover {
-  color: #fff;
-}
-.flot-chart {
-  display: block;
-  height: 400px;
-}
-.flot-chart-content {
+.rad-sidebar li a {
+  display: inline-block;
   width: 100%;
-  height: 100%;
+  color: white;
+}
+.rad-sidebar li a i {
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+}
+.rad-sidebar li a i:before {
+  z-index: 10;
+  position: relative;
+}
+.rad-sidebar li a > span {
+  -webkit-transition: all .2s ease-in-out;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.rad-sidebar li:hover {
+  background: #263340;
+}
+.rad-sidebar li a:hover{
+  text-decoration: none;
+}
+.rad-sidebar.rad-nav-min {
+  width: 50px !important;
+}
+.rad-sidebar.rad-nav-min .rad-sidebar-item {
+  -webkit-transform: translate3d(-200px, 0, 0)!important;
+  transform: translate3d(-200px, 0, 0)!important;
+}
+.rad-body-wrapper {
+  position: absolute;
+  left: 250px;
+  top: 75px;
+  width: auto;
+  right: 0;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+.rad-body-wrapper.rad-nav-min {
+  left: 50px;
+}
+.rad-chart {
+  height: 250px;
 }
 .iconCircleMenu{
   color: #00B1F1;
-    margin-right: 15px;
+  /*margin-right: 15px;*/
 }
-.nav>.liMenu>a:hover {
-    text-decoration: none;
-    background-color: #00B1F1;
-} 
-.nav>.liMenu>a:hover .iconCircleMenu{
-    color: #fff;
-}
-.nav>.liMenu>a:hover .textMenu{
+.rad-sidebar li:hover .iconCircleMenu{
     color: #fff;
 }
 .user {
@@ -66,22 +102,12 @@
   font-size: 20px;
   float: right;
 }
-@media(min-width:768px) {
-  .side-nav {
-    position: fixed;
-    top: 51px;
-    left: 225px;
-    width: 225px;
-    margin-left: -225px;
-    border: none;
-    border-radius: 0;
-    overflow-y: auto;
-    background-color: #222;
-    bottom: 0;
-    overflow-x: hidden;
-    padding-bottom: 40px;
+@media screen and (max-width: 850px){
+  .rad-sidebar {
+    top: 100px;
   }
-  .side-nav>li>a {
-    width: 225px;
+  .rad-sidebar.rad-nav-min {
+    -webkit-transform: translate3d(-200px, 0, 0);
+    transform: translate3d(-200px, 0, 0);
   }
 }
