gh-pages prueba

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
 	<navbar></navbar>
 </section>
 <aside>
@@ -7,3 +7,7 @@
 <main>
 	<page-wrapper></page-wrapper>
 </main>
+ -->
+<navbar></navbar>
+<sidebar></sidebar>
+<page-wrapper></page-wrapper>
