--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,10 +7,10 @@ body {
   font-size: 16px!important;
   font-family: sans-serif!important;
 }
-a,
-a:hover {
+a, a:hover {
   text-decoration: none!important;
 }
+
 @-webkit-keyframes flipInX {
   0% {
     -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
