--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,33 +1,35 @@
-<header>
-  <nav class="rad-navigation">
-    <div class="rad-logo-container">
-        <a href="#" class="rad-logo"><img src="./assets/img/logo_minsa.jpg" alt=""></a>
-        <a href="#" class="rad-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
-    </div>
-    <div class="rad-top-nav-container">
-      <ul class="links">
-        <li>
-          <a class="rad-menu-item" href="#"><i class="fa fa-comment-o"></i></a>
-        </li>
-        <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-envelope-o"><span class="rad-menu-badge">3</span></i></a>
-          <ul class="rad-dropmenu-item">
-            <li class="rad-dropmenu-header"><a href="#">Your Notifications</a></li>
-            <li class="rad-notification-item">
+<section>
+  <header>
+    <nav class="rad-navigation">
+      <div class="rad-logo-container">
+          <a href="#" class="rad-logo"><img src="./assets/img/logo_minsa.jpg" alt=""></a>
+          <a href="#" class="rad-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
+      </div>
+      <div class="rad-top-nav-container">
+        <ul class="links">
+          <li>
+            <a class="rad-menu-item" href="#"><i class="fa fa-comment-o"></i></a>
+          </li>
+          <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-envelope-o"><span class="rad-menu-badge">3</span></i></a>
+            <ul class="rad-dropmenu-item">
+              <li class="rad-dropmenu-header"><a href="#">Your Notifications</a></li>
+              <li class="rad-notification-item">
+                  <a class="rad-notification-content" href="#"></a>
+                </li>
+                <li class="rad-dropmenu-footer"><a href="#">See all notifications</a></li>
+            </ul>
+          </li>
+          <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-bell-o"><span class="rad-menu-badge">49</span></i></a>
+            <ul class="rad-dropmenu-item">
+              <li class="rad-dropmenu-header"><a href="#">Your Alerts</a></li>
+              <li class="rad-notification-item">
                 <a class="rad-notification-content" href="#"></a>
-              </li>
-              <li class="rad-dropmenu-footer"><a href="#">See all notifications</a></li>
-          </ul>
-        </li>
-        <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-bell-o"><span class="rad-menu-badge">49</span></i></a>
-          <ul class="rad-dropmenu-item">
-            <li class="rad-dropmenu-header"><a href="#">Your Alerts</a></li>
-            <li class="rad-notification-item">
-              <a class="rad-notification-content" href="#"></a>
-              </li>
-              <li class="rad-dropmenu-footer"><a href="#">See all alerts</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+                </li>
+                <li class="rad-dropmenu-footer"><a href="#">See all alerts</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+</section>
