--- a/src/app/common/collapse/collapse.component.html
+++ b/src/app/common/collapse/collapse.component.html
@@ -25,8 +25,15 @@
       </ul>
     </div>
   </div> 
-  <section class="collapse">
-    <div class="collapse__head"> collapse head</div>
+  <section class="collapse" *ngFor="let item of items" [attr.id]="'Location' + item.id">
+    <div class="collapse__head">
+      <span class="itemInfo"> {{ item.info }} </span>
+      <span class="itemDescription"> {{ item.description }} </span>
+      <svg  class="nav-indicator nav-indicator--alt" width="22" height="22" viewbox="0 0 26 26">
+        <path d="M11,1 L21,11 L11,21 L1,11"></path>
+        <path d="M11,1 L1,11 L11,21 L1,11"></path>
+      </svg>
+    </div>
     <div class="collapse__body">
       <div class="container-fluid container-cards">
         <div class="row">
@@ -37,18 +44,17 @@
       </div>
     </div>
   </section>
-
-  <section class="collapse">
-  <div class="collapse__head"> collapse head</div>
+  <!-- <section class="collapse">
+    <div class="collapse__head"> collapse head</div>
     <div class="collapse__body">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sequi eveniet eos quae rerum cupiditate non in dignissimos corporis deleniti labore minus similique incidunt reprehenderit sit nobis accusamus natus explicabo.</p>
     </div>
   </section>
   <section class="collapse">
-  <div class="collapse__head"> collapse head</div>
-    <div class="collapse__body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sequi eveniet eos quae rerum cupiditate non in dignissimos corporis deleniti labore minus similique incidunt reprehenderit sit nobis accusamus natus explicabo.</p>
-    </div>
-  </section> 
+    <div class="collapse__head"> collapse head</div>
+  <div class="collapse__body">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sequi eveniet eos quae rerum cupiditate non in dignissimos corporis deleniti labore minus similique incidunt reprehenderit sit nobis accusamus natus explicabo.</p>
+  </div>
+  </section>  -->
 </section>
 
