--- a/src/app/common/page-wrapper/page-wrapper.component.html
+++ b/src/app/common/page-wrapper/page-wrapper.component.html
@@ -2,12 +2,12 @@
   <section>
     <div class="rad-body-wrapper">
         <div class="container-fluid">
-          <!-- <title-content></title-content> -->
-          <h1>Titulo</h1>
-        </div>
-        <div class="row">
-          <!-- <collapse></collapse> -->
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quaerat quae impedit, ipsa nisi dolorem facilis cum praesentium illum doloribus? Perspiciatis laboriosam minima doloremque assumenda alias maiores voluptatibus iusto sunt!</p>
+          <title-content></title-content>
+          <div class="row">
+            <div class="col-lg-12">
+              <collapse></collapse>
+            </div>   
+          </div>
         </div>
     </div>
   </section>
