--- a/src/app/common/card/card.component.css
+++ b/src/app/common/card/card.component.css
@@ -22,7 +22,7 @@
 }
 .buttonCard{
   background-color: #f9f9f9;
-  padding: 3% 0 0 3%;
+  padding: 3% 0 1% 3%;
   border-top: 1px solid #cecece
 }
 .buttonCard p{
