--- a/src/app/common/collapse/collapse.component.css
+++ b/src/app/common/collapse/collapse.component.css
@@ -161,5 +161,12 @@
   transition: stroke-dashoffset 0.3s;
 }
 .flecha{
-  stroke-dashoffset: 0;
+  fill: none;
+  stroke: #00B1F1;
+  stroke-linecap: square;
+  stroke-width: 2;
+  stroke-dasharray: 14 40;
+  stroke-dashoffset: 0!important;
+  -webkit-transition: stroke-dashoffset 0.3s;
+  transition: stroke-dashoffset 0.3s;
 }
