--- a/src/app/common/card/card.component.css
+++ b/src/app/common/card/card.component.css
@@ -1,6 +1,5 @@
 /* -------------------------------------    CARDS   ------------------------------------ */
 .card{
-  /*display: none;*/
   width: 90%;
   border-radius: 4px;
   background-color: #FFFFFF;
@@ -45,5 +44,7 @@
   padding-top: 75%;
 }
 @media screen and (max-width: 850px){
-  
+  .card{
+    width: 100%;
+  }
 }
