--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -6,26 +6,24 @@
           <a href="#" class="rad-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
       </div>
       <div class="rad-top-nav-container">
-        <ul class="links">
-          <li>
-            <a class="rad-menu-item" href="#"><i class="fa fa-comment-o"></i></a>
-          </li>
-          <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-envelope-o"><span class="rad-menu-badge">3</span></i></a>
-            <ul class="rad-dropmenu-item">
-              <li class="rad-dropmenu-header"><a href="#">Your Notifications</a></li>
-              <li class="rad-notification-item">
-                  <a class="rad-notification-content" href="#"></a>
-                </li>
-                <li class="rad-dropmenu-footer"><a href="#">See all notifications</a></li>
-            </ul>
-          </li>
-          <li class="rad-dropdown"><a class="rad-menu-item" href="#"><i class="fa fa-bell-o"><span class="rad-menu-badge">49</span></i></a>
-            <ul class="rad-dropmenu-item">
-              <li class="rad-dropmenu-header"><a href="#">Your Alerts</a></li>
-              <li class="rad-notification-item">
-                <a class="rad-notification-content" href="#"></a>
-                </li>
-                <li class="rad-dropmenu-footer"><a href="#">See all alerts</a></li>
+        <ul class="nav navbar-right top-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="iconDropdown fa fa-user-circle-o"></i>
+              <span class="nameUserDropdown">Sandra Suárez Peralta</span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="#"><i class="fa fa-user-circle-o"></i> Mi Perfil</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-fw fa-gear"></i> Configuración</a>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <a href="#"><i class="fa fa-fw fa-power-off"></i> Cerrar Sesión</a>
+              </li>
             </ul>
           </li>
         </ul>
