--- a/src/app/common/collapse/collapse.component.css
+++ b/src/app/common/collapse/collapse.component.css
@@ -9,7 +9,7 @@
   padding: 5px 10px 5px 0;
 }
 .collapse .collapse__body {
-  padding: 10px 0px 10px 0;
+  padding: 2% 0px 1% 0;
   display: none;
 }
 .collapse .collapse__body p {
@@ -79,6 +79,10 @@
   }
   .collapse__body .container-cards{
     padding-left: 15px;
+  }
+  .collapse .collapse__body{
+    padding: 4% 0px 1% 0;
+    display: none;
   }
 }
 @media screen and (max-width: 620px){
