--- a/src/app/common/page-wrapper/page-wrapper.component.html
+++ b/src/app/common/page-wrapper/page-wrapper.component.html
@@ -9,6 +9,7 @@
             </div>   
           </div>
         </div>
+        <div class="sidenav-overlay"></div>
     </div>
   </section>
 </main>
