--- a/src/app/common/sidebar/sidebar.component.css
+++ b/src/app/common/sidebar/sidebar.component.css
@@ -1,10 +1,8 @@
-* {
-  box-sizing: border-box!important;
-}
 .rad-sidebar {
   z-index: 9999;
   position: fixed;
-  background: #0A3442;
+  /*background: #0A3442;*/
+  background: #fff;
   width: 225px;
   height: 100vh;
   top: 50px;
@@ -20,7 +18,8 @@
 .rad-sidebar li a {
   display: inline-block;
   width: 100%;
-  color: white;
+  /*color: #fff;*/
+  color: #828282;
 }
 .rad-sidebar li a i {
   width: 50px;
@@ -37,7 +36,7 @@
   transform: translate3d(0, 0, 0);
 }
 .rad-sidebar li:hover {
-  background: #15adcb;
+  background: #00B1F1;
 }
 .rad-sidebar li a:hover{
   text-decoration: none;
@@ -65,13 +64,16 @@
   height: 250px;
 }
 .iconCircleMenu{
-  color: #15adcb;
+  color: #00B1F1;
 }
 .rad-sidebar li:hover .iconCircleMenu{
-    color: #fff;
+  color: #fff;
+}
+.rad-sidebar li:hover span{
+  color: #fff;
 }
 .user {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid #e6e6e6;
   padding-bottom: 30px;
   margin-top: 40px;
 }
@@ -83,7 +85,8 @@
   margin: 0 auto;
 }
 .nameUser, .lastNameUser{
-  color: #fff;
+  /*color: #fff;*/
+  color: #828282;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -96,7 +99,7 @@
   padding-right: 6%;
 }
 .iconCogs{
-  color: #15adcb;
+  color: #00B1F1;
   text-align: right;
   font-size: 20px;
   float: right;
@@ -104,17 +107,17 @@
 @media screen and (max-width: 850px){
   .rad-sidebar {
     top: 100px;
+    -webkit-transform: translate3d(-250px, 0, 0);
+    transform: translate3d(-250px,0,0);
   }
   .rad-sidebar.rad-nav-min {
-    -webkit-transform: translate3d(-200px, 0, 0);
-    transform: translate3d(-200px, 0, 0);
+    width: 225px !important;
+    -webkit-transform: translate3d(0px, 0, 0);
+    transform: translate3d(0px, 0, 0);
   }
 }
 @media screen and (min-width: 850px){
   .rad-sidebar.rad-nav-min{
     width: 225px !important;
-  }
-  .rad-body-wrapper.rad-nav-min{
-    left: 225px !important;
   }
 }
