change color sidebar

--- a/src/app/common/collapse/collapse.component.html
+++ b/src/app/common/collapse/collapse.component.html
@@ -12,9 +12,9 @@
     <div class="collapse__body">
       <div class="container-fluid container-cards">
         <div class="row">
-          <div class="col-lg-4"><card></card></div>
-          <div class="col-lg-4"><card></card></div>
-          <div class="col-lg-4"><card></card></div>
+          <div class="col-sm-6 col-lg-4"><card></card></div>
+          <div class="col-sm-6 col-lg-4"><card></card></div>
+          <div class="col-sm-6 col-lg-4"><card></card></div>
         </div>
       </div>
     </div>
