--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,16 +1,19 @@
 <div class="card">
   <div class="header">
     <div class="container-fluid">
-        <div class="row ">
-          <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
-            <img src="./assets/img/img_children_card.png" class="img-responsive img-circle" alt="imagen del primer hijo">
-          </div>
-          <div class="col-xs-7 col-sm-4 col-md-7 col-lg-7">
-            <p class="nameChildren">Carlos Rojas Suarez</p>
-          </div>
-          <div class="col-xs-2 col-sm-4 col-md-2 col-lg-2">
-            <img src="./assets/img/gender_24.png" class="img-responsive iconGener" alt="icono de genero masculino">
-          </div>
+        <div class="row enlaceCard">
+          <a href="perfil.html">
+            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
+              <img src="./assets/img/img_children_card.png" class="img-responsive img-circle" alt="imagen del primer hijo">
+            </div>
+            <div class="col-xs-7 col-sm-4 col-md-7 col-lg-7">
+              <a href="perfil.html" class="nameChildren">Carlos Rojas Suarez</a>
+              <!-- <p class="nameChildren">Carlos Rojas Suarez</p> -->
+            </div>
+            <div class="col-xs-2 col-sm-4 col-md-2 col-lg-2">
+              <img src="./assets/img/gender_24.png" class="img-responsive iconGener" alt="icono de genero masculino">
+            </div>
+          </a> 
         </div>
     </div>
   </div>
